# Tutorials

./: .gitignore  build-linux.sh
OpenGLTutorials/HelloWindow/: CMakeLists.txt  README.md
OpenGLTutorials/HelloWindow/src/: main.cpp
OpenGLTutorials/LoadingShaders/: CMakeLists.txt  a.out
OpenGLTutorials/LoadingShaders/resources/: shader.frag  shader.vert
OpenGLTutorials/LoadingShaders/src/: main.cpp  shader.h
OpenGLTutorials/LoadingShadersSourceCode/: Shader.cpp
OpenGLTutorials/makingShadersSourceCode/: main.cpp
OpenGLTutorials/makingShadersSourceCode/resources/: myshader.frag  myshader.vert
OpenGLTutorials/openingAWindowSourceCode/: a.out  main.cpp
OpenGLTutorials/oppeningAWindowSourceCode/: main.cpp
adding_lua/src/: main.cpp
adding_lua_move/: CMakeLists.txt
adding_lua_move/src/: main.cpp
cMakeTest/: CMakeLists.txt  main.cpp
cpp/: a.out  graphics_math_sandbox.cpp
drawing_rect/: CMakeLists.txt
drawing_rect/src/: main.cpp
opengl_rendering/: CMakeLists.txt
opengl_rendering/assets/scripts/: main.lua
opengl_rendering/src/: main.cpp
